--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "mongoose": "^8.18.2"
+  },
+  "devDependencies": {
+    "@types/mongoose": "^5.11.96"
   }
 }
