--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/Sufyan0fficial/RealState-MarketPlace#readme",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.18.2"
   },
   "devDependencies": {
