Google OAuth Service added

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 MONGODB_CONNECTION_STR = mongodb+srv://computer388unofficial_db_user:MSufyan388@taskmanager-mern.t3jpjmk.mongodb.net/RealState_MRP_DB
-COOKIE_STR = KDJREKRJE328309309842LJFJK
+JWT_SECRET_TOKEN = KDJREKRJE328309309842LJFJK
