--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "build":"npm install && npm install --prefix Client && npm build --prefix Client"
+    "build":"npm install && npm install --prefix Client && npm run build --prefix Client"
   },
   "repository": {
     "type": "git",
