--- a/Client/.env
+++ b/Client/.env
@@ -1,2 +1,2 @@
-VITE_API_BASE_URL =  https://realstate-marketplace.onrender.com/
+VITE_API_BASE_URL =  https://realstate-marketplace.onrender.com
 VITE_FIREBASE_API_URL = "AIzaSyBPE-MqJZH3YpHY_ZVYCqnUmBb91iGndQg"
